--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <br>
             <img src="https://via.placeholder.com/1080x350" alt="">
             <br>
-            <img src="https://via.placeholder.com/1080x350" alt="">
+            <img src="static/images/logo.png" alt="">
         </div>
     </div>
 
