--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
             </nav>
 
-            <img src="https://via.placeholder.com/1080x350" alt="">
+            <img src="static/images/web-1.png" alt="">
         </div>
     </div>
 
