--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="level-left">
                     <div class="level-item">
                         <p class="subtitle is-6 is-uppercase">
-                            Category
+                            Digital Media
                         </p>
                     </div>
                 </div>
@@ -64,6 +64,8 @@
             </nav>
 
             <img src="static/images/web-1.png" alt="">
+            <br>
+            <img src="static/images/web-2.png" alt="">
         </div>
     </div>
 
@@ -76,7 +78,7 @@
                 <div class="level-left">
                     <div class="level-item">
                         <p class="subtitle is-6 is-uppercase">
-                            Category
+                            Print Marketing
                         </p>
                     </div>
                 </div>
@@ -86,7 +88,13 @@
                 </div>
             </nav>
 
-            <img src="https://via.placeholder.com/1080x350" alt="">
+            <img src="static/images/print-1.png" alt="">
+            <br>
+            <img src="static/images/print-2.png" alt="">
+            <br>
+            <img src="static/images/print-3.png" alt="">
+            <br>
+            <img src="static/images/print-4.png" alt="">
         </div>
     </div>
 
@@ -99,7 +107,7 @@
                 <div class="level-left">
                     <div class="level-item">
                         <p class="subtitle is-6 is-uppercase">
-                            Category
+                            Illustration
                         </p>
                     </div>
                 </div>
@@ -109,13 +117,10 @@
                 </div>
             </nav>
 
-            <img src="https://via.placeholder.com/1080x350" alt="">
+            <img src="static/images/illustration-1.png" alt="">
             <br>
-            <img src="https://via.placeholder.com/1080x350" alt="">
+            <img src="static/images/illustration-2.png" alt="">
             <br>
-            <img src="https://via.placeholder.com/1080x350" alt="">
-            <br>
-            <img src="static/images/logo.png" alt="">
         </div>
     </div>
 
