--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
             <img src="static/images/print-1.png" alt="">
             <br>
-            <img src="static/images/print-2.png" alt="">
+            <img src="static/images/print-media-2.png" alt="">
             <br>
             <img src="static/images/print-3.png" alt="">
             <br>
