--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <br>
             <img src="static/images/print-3.png" alt="">
             <br>
-            <img src="static/images/print-4.png" alt="">
+            <img src="static/images/marketing-book.png" alt="">
         </div>
     </div>
 
