--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
 
             <img src="static/images/web-1.png" alt="">
             <br>
+            <img src="static/images/web-1-mockup.png" alt="">
+            <br>
             <img src="static/images/web-2.png" alt="">
         </div>
     </div>
