--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
 
                 <!-- Right side -->
                 <div class="level-right">
+                    <!--
                     <p class="level-item"><strong>All</strong></p>
                     <p class="level-item"><a>Published</a></p>
                     <p class="level-item"><a>Drafts</a></p>
+                    -->
+                    <p class="level-item"><a href="mailto:marina.fedoran@gmail.com">Get in touch</a></p>
                 </div>
             </nav>
         </div>
