--- a/index.html
+++ b/index.html
@@ -27,9 +27,14 @@
                 <!-- Left side -->
                 <div class="level-left">
                     <div class="level-item">
-                        <p class="title is-4">
-                            MARINA FEDORAN
-                        </p>
+                        <div>
+                            <p class="title is-3">
+                                MARINA FEDORAN
+                            </p>
+                            <p class="subtitle is-6 mt-0">
+                                Graphic Designer & Illustrator
+                            </p>
+                        </div>
                     </div>
                 </div>
 
@@ -66,11 +71,9 @@
                 </div>
             </nav>
 
-            <img src="static/images/web-1.png" alt="">
-            <br>
-            <img src="static/images/web-1-mockup.png" alt="">
-            <br>
-            <img src="static/images/web-2.png" alt="">
+            <p class="pb-5"><img src="static/images/web-1.png" alt=""></p>
+            <p class="pb-5"><img src="static/images/web-1-mockup.png" alt=""></p>
+            <p class="pb-5"><img src="static/images/web-2.png" alt=""></p>
         </div>
     </div>
 
@@ -93,13 +96,10 @@
                 </div>
             </nav>
 
-            <img src="static/images/print-1.png" alt="">
-            <br>
-            <img src="static/images/print-media-2.png" alt="">
-            <br>
-            <img src="static/images/print-3.png" alt="">
-            <br>
-            <img src="static/images/marketing-book.png" alt="">
+            <p class="pb-5"><img src="static/images/print-1.png" alt=""></p>
+            <p class="pb-5"><img src="static/images/print-media-2.png" alt=""></p>
+            <p class="pb-5"><img src="static/images/print-3.png" alt=""></p>
+            <p class="pb-5"><img src="static/images/marketing-book.png" alt=""></p>
         </div>
     </div>
 
@@ -122,16 +122,14 @@
                 </div>
             </nav>
 
-            <img src="static/images/illustration-1.png" alt="">
-            <br>
-            <img src="static/images/illustration-2.png" alt="">
-            <br>
+            <p class="pb-5"><img src="static/images/illustration-1.png" alt=""></p>
+            <p class="pb-5"><img src="static/images/illustration-2.png" alt=""></p>
         </div>
     </div>
 
     <footer class="footer">
         <div class="content has-text-centered">
-            <p>
+            <p class="pb-5">
                 <strong>Designs</strong> by <a href="mailto:marina.fedoran@gmail.com">Marina Fedoran</a>.
             </p>
         </div>
