--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <p class="level-item"><a>Published</a></p>
                     <p class="level-item"><a>Drafts</a></p>
                     -->
-                    <p class="level-item"><a href="mailto:marina.fedoran@gmail.com">Get in touch</a></p>
+                    <p class="level-item"><a href="mailto:marfedoran@gmail.com">Get in touch</a></p>
                 </div>
             </nav>
         </div>
@@ -130,7 +130,7 @@
     <footer class="footer">
         <div class="content has-text-centered">
             <p class="pb-5">
-                <strong>Designs</strong> by <a href="mailto:marina.fedoran@gmail.com">Marina Fedoran</a>.
+                <strong>Designs</strong> by <a href="mailto:marfedoran@gmail.com">Marina Fedoran</a>.
             </p>
         </div>
     </footer>
