--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             <p class="pb-5"><img src="static/images/web-1.png" alt=""></p>
             <p class="pb-5"><img src="static/images/web-1-mockup.png" alt=""></p>
             <p class="pb-5"><img src="static/images/web-2.png" alt=""></p>
+            <p class="pb-5"><img src="static/images/display-ads.png" alt=""></p>
         </div>
     </div>
 
