--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
             <p class="pb-5"><img src="static/images/print-media-2.png" alt=""></p>
             <p class="pb-5"><img src="static/images/print-3.png" alt=""></p>
             <p class="pb-5"><img src="static/images/marketing-book.png" alt=""></p>
+            <p class="pb-5"><img src="static/images/brochure.png" alt=""></p>
+            <p class="pb-5"><img src="static/images/brochure-tiled.png" alt=""></p>
         </div>
     </div>
 
