--- a/index.html
+++ b/index.html
@@ -65,6 +65,21 @@
                 <!-- Left side -->
                 <div class="level-left">
                     <div class="level-item">
+                        <p class="subtitle is-6 is-uppercase">MOTION GRAPHICS/VIDEO</p>
+                    </div>
+                </div>
+
+                <!-- Right side -->
+                <div class="level-right">
+                </div>
+            </nav>
+
+            <p class="pb-5"><img src="static/images/motion-graphics-video-girl-guides.png" alt=""></p>
+
+            <nav class="level">
+                <!-- Left side -->
+                <div class="level-left">
+                    <div class="level-item">
                         <p class="subtitle is-6 is-uppercase">MOBILE APPS</p>
                     </div>
                 </div>
@@ -74,7 +89,9 @@
                 </div>
             </nav>
 
-            <p class="pb-5"><img src="static/images/mobile-app-mockup.png" alt=""></p><nav class="level">
+            <p class="pb-5"><img src="static/images/mobile-app-mockup.png" alt=""></p>
+            
+            <nav class="level">
                 <!-- Left side -->
                 <div class="level-left">
                     <div class="level-item">
