--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
                 </div>
             </nav>
         </div>
-
     </div>
 
 
@@ -78,7 +77,7 @@
                 </div>
             </nav>
 
-            <p class="pb-5"><img src="static/images/motion-graphics-video-girl-guides.png" alt=""></p>
+            <p class="pb-5"><a href="https://www.youtube.com/watch?v=qn6eQH9oaW4"><img src="static/images/motion-graphics-video-girl-guides.png" alt=""></a></p>
 
             <nav class="level">
                 <!-- Left side -->
@@ -142,12 +141,22 @@
                 <div class="level-right">
                 </div>
             </nav><p class="pb-5"><img src="static/images/web-display.png" alt=""></p>
-        </div>
-    </div>
 
+            <nav class="level">
+                <!-- Left side -->
+                <div class="level-left">
+                    <div class="level-item">
+                        <p class="subtitle is-6 is-uppercase">ILLUSTRATION</p>
+                    </div>
+                </div>
 
-    <div class="section">
-        <div class="container">
+                <!-- Right side -->
+                <div class="level-right">
+                </div>
+            </nav>
+
+            <p class="pb-5"><img src="static/images/illustration-1.png" alt=""></p>
+            <p class="pb-5"><img src="static/images/illustration-2.png" alt=""></p>
 
             <nav class="level">
                 <!-- Left side -->
@@ -168,28 +177,7 @@
             <p class="pb-5"><img src="static/images/marketing-book.png" alt=""></p>
             <p class="pb-5"><img src="static/images/brochure.png" alt=""></p>
             <p class="pb-5"><img src="static/images/brochure-tiled.png" alt=""></p>
-        </div>
-    </div>
 
-
-    <div class="section">
-        <div class="container">
-
-            <nav class="level">
-                <!-- Left side -->
-                <div class="level-left">
-                    <div class="level-item">
-                        <p class="subtitle is-6 is-uppercase">ILLUSTRATIONS</p>
-                    </div>
-                </div>
-
-                <!-- Right side -->
-                <div class="level-right">
-                </div>
-            </nav>
-
-            <p class="pb-5"><img src="static/images/illustration-1.png" alt=""></p>
-            <p class="pb-5"><img src="static/images/illustration-2.png" alt=""></p>
         </div>
     </div>
 
